--- a/frontend/src/components/UpdateSpot/UpdateSpot.css
+++ b/frontend/src/components/UpdateSpot/UpdateSpot.css
@@ -1,4 +1,4 @@
-.form-container {
+.update-spot-container{
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
@@ -7,7 +7,7 @@
   border-radius: 8px;
 }
 
-.form {
+.update-form{
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -32,7 +32,7 @@
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  white-space: pre-wrap; 
+  white-space: pre-wrap;
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
