--- a/frontend/src/components/Navigation/Navigation-bonus.css
+++ b/frontend/src/components/Navigation/Navigation-bonus.css
@@ -1,51 +1,56 @@
 
-/* .head-container {
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
-  border-bottom: 1px solid #eee;
-}
-
-.title{
-  color: #FF385C;
-  padding: 20px;
-  display: inline-block;
-  position: relative;
-  display: flex;
-}
-
-
-
-.profile-container{
-  display: flex;
-  padding: 20px;
-  align-items: center;
-  justify-content: center;
-
-} */
-
 .head-container {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
+  justify-content: space-between;
   height: 75px;
-  padding: 5px;
+  padding-top: 15px;
   border-bottom: 1px solid #eee;
 
 }
 
 .title{
+  display: inline-flex;
   color: #FF385C;
-  position: relative;
-  display: flex;
+  /* position: relative;
+  display: flex; */
 }
 
 
-.profile-container{
+
+.create-profile {
   display: flex;
-  padding: 5px;
   align-items: center;
+  border-radius: 8px;
+  padding-bottom: 30px;
+  padding-right: 190px;
+}
+
+.create-spot {
+  font-size: 2rem;
+  color:#FF385C;
+  display: inline-block;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+
+}
+
+.create-spot {
+  /* background-color: #b1adada1; */
+  padding: 10px 15px;
+  border-radius: 20px;
+  margin-right: 10px;
+  padding: 10px;
+  display: flex;
+  box-shadow: 0px 8px 15px rgba(0,0,0,0.1);
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   justify-content: center;
-  margin-top: 20px;
+  font-size: 1.2rem;
+  margin-top: -20px;
 }
