--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -24,3 +24,149 @@
   height: 257px;
 
 }
+
+
+.info-section {
+
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+  border-bottom: 2px solid #3e3d3d7b;
+
+}
+
+
+.host {
+  color: #555;
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+  margin-right: 90px;
+  width: 75%;
+
+}
+
+.description {
+  color: #333;
+  line-height: 1.6;
+  margin-bottom: 2rem;
+  box-sizing: border-box;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+
+.reservation {
+
+  text-align: center;
+  border: 1px solid #e4e4e4;
+  border-radius: 8px;
+  padding: 15px;
+  width: 26%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.pricing-and-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  height: auto;
+  width: 87%;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+
+.price-detail {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.rating-detail{
+  display: flex;
+}
+
+.reserve-btn {
+  padding: 20px;
+  background-color: #ff385c;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 1.25rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.reserve-btn:hover {
+  background-color: #e03150;
+}
+
+@media (max-width: 1024px) {
+
+  /* .details-container {
+    padding: 0 20px;
+  } */
+
+  .image-gallery {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .primary-image,
+  .additional-image {
+    width: 100%;
+    padding: 5px 0;
+  }
+
+  .secondary-images {
+    grid-template-columns: 1fr;
+  }
+
+  .info-section {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .hosting-details,
+  .description-text {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .reservation-info {
+    width: 100%;
+    padding: 20px;
+    margin-top: 20px;
+  }
+
+  .pricing-and-rating {
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .nightly-rate {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+
+  .star-rating-container {
+    justify-content: center;
+  }
+
+  .reserve-btn {
+    font-size: 0.8rem;
+    padding: 15px;
+    width: 100%;
+  }
+
+  .reviews-container-bottom {
+    position: relative;
+    bottom: auto;
+    left: auto;
+  }
+}
